domba - logo animations, form align

--- a/index.html
+++ b/index.html
@@ -250,30 +250,26 @@
                                 <option>5</option>
                             </select>
                         </div>
-                        <!--<div class="form-group col-xs-12">-->
-                            <!--<select class="form-control input-lg">-->
-                                <!--<option>Izaberite grad</option>-->
-                                <!--<option>2</option>-->
-                                <!--<option>3</option>-->
-                                <!--<option>4</option>-->
-                                <!--<option>5</option>-->
-                            <!--</select>-->
-                        <!--</div>-->
-                        <div class="form-group col-xs-6">
-                            <label class="control-label" for="object-type">Vrsta objekta</label>
-                            <div class="input-group">
-                                <span class="input-group-addon">od:</span>
-                                <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
-                                <div class="input-group-addon">KM</div>
+                        <div class="col-xs-12">
+                            <label class="control-label" for="">Cijena</label>
+                            <div class="wrapper">
+                                <div class="form-group col-xs-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">od:</span>
+                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <div class="input-group-addon">KM</div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-xs-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">do:</span>
+                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <div class="input-group-addon">KM</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group col-xs-6">
-                            <div class="input-group">
-                                <span class="input-group-addon">do:</span>
-                                <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
-                                <div class="input-group-addon">KM</div>
-                            </div>
-                        </div>
+
 
 
                         <div class="form-group col-xs-12">
