--- a/app/index.html
+++ b/app/index.html
@@ -213,6 +213,7 @@
 </header>
 
 <section class="hero">
+    <div class="hero-overlay"></div>
     <div class="wrapper-outer">
         <div class="wrapper">
 
@@ -262,6 +263,11 @@
             </div>
 
             <div class="hero-search-area">
+
+                <div class="hero-search-area-title">
+                    <h3>Pretražite oglase</h3>
+                </div>
+
                 <button class="open-search-btn btn btn-primary btn-lg btn-block collapsed" type="button" data-toggle="collapse" data-target="#hero-search-area" aria-expanded="false" aria-controls="collapseExample">
                     Pretraga nekretnina
                     <span class="fa fa-plus"></span>
@@ -270,7 +276,7 @@
                     <form>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="ad-type">Vrsta oglasa</label>
-                            <select id="ad-type" class="form-control input-lg">
+                            <select id="ad-type" class="form-control">
                                 <option>Izaberite vrstu oglasa</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -280,7 +286,7 @@
                         </div>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="object-type">Vrsta objekta</label>
-                            <select id="object-type" class="form-control input-lg">
+                            <select id="object-type" class="form-control">
                                 <option>Izaberite vrstu objekta</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -290,7 +296,7 @@
                         </div>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="city">Grad</label>
-                            <select id="city" class="form-control input-lg">
+                            <select id="city" class="form-control">
                                 <option>Izaberite grad</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -304,14 +310,14 @@
                                 <div class="form-group col-xs-6">
                                     <div class="input-group">
                                         <span class="input-group-addon">od:</span>
-                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
                                         <div class="input-group-addon">KM</div>
                                     </div>
                                 </div>
                                 <div class="form-group col-xs-6">
                                     <div class="input-group">
                                         <span class="input-group-addon">do:</span>
-                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
                                         <div class="input-group-addon">KM</div>
                                     </div>
                                 </div>
@@ -321,7 +327,7 @@
 
 
                         <div class="form-group col-xs-12">
-                            <button type="submit" class="btn search-btn btn-lg btn-search">Pretraži</button>
+                            <button type="submit" class="btn search-btn btn-search">Pretraži</button>
                         </div>
                     </form>
                 </div>
