--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <form>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="ad-type">Vrsta oglasa</label>
-                            <select id="ad-type" class="form-control input-lg">
+                            <select id="ad-type" class="form-control">
                                 <option>Izaberite vrstu oglasa</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -44,7 +44,7 @@
                         </div>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="object-type">Vrsta objekta</label>
-                            <select id="object-type" class="form-control input-lg">
+                            <select id="object-type" class="form-control">
                                 <option>Izaberite vrstu objekta</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-group col-xs-12">
                             <label class="control-label" for="city">Grad</label>
-                            <select id="city" class="form-control input-lg">
+                            <select id="city" class="form-control">
                                 <option>Izaberite grad</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -68,21 +68,39 @@
                                 <div class="form-group col-xs-6">
                                     <div class="input-group">
                                         <span class="input-group-addon">od:</span>
-                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
                                         <div class="input-group-addon">KM</div>
                                     </div>
                                 </div>
                                 <div class="form-group col-xs-6">
                                     <div class="input-group">
                                         <span class="input-group-addon">do:</span>
-                                        <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
                                         <div class="input-group-addon">KM</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-
+                        <div class="col-xs-12">
+                            <label class="control-label" for="">Velicina</label>
+                            <div class="wrapper">
+                                <div class="form-group col-xs-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">od:</span>
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <div class="input-group-addon">m&sup2</div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-xs-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">do:</span>
+                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                                        <div class="input-group-addon">m&sup2</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="form-group col-xs-12">
                             <button type="submit" class="btn search-btn btn-lg btn-search">Pretraži</button>
@@ -255,7 +273,7 @@
                         </svg>
                     </div>
                     <div class="hero-text">
-                        <p>Ukoliko prodajete ili izdajete nekretnine</p>
+                        <p>Dobrodošli na vodeći portal za prodaju/izdavanje nekretnina u BIH</p>
                     </div>
                 </div>
             </div>
@@ -302,24 +320,53 @@
                                 <option>5</option>
                             </select>
                         </div>
-                        <div class="col-xs-12">
-                            <label class="control-label" for="">Cijena</label>
-                            <div class="wrapper">
-                                <div class="form-group col-xs-6">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">od:</span>
-                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
-                                        <div class="input-group-addon">KM</div>
-                                    </div>
-                                </div>
-                                <div class="form-group col-xs-6">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">do:</span>
-                                        <input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
-                                        <div class="input-group-addon">KM</div>
-                                    </div>
-                                </div>
-                            </div>
+                        <!--<div class="col-xs-12">-->
+                            <!--<label class="control-label" for="">Cijena</label>-->
+                            <!--<div class="wrapper">-->
+                                <!--<div class="form-group col-xs-6">-->
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon">od:</span>-->
+                                        <!--<input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">-->
+                                        <!--<div class="input-group-addon">KM</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="form-group col-xs-6">-->
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon">do:</span>-->
+                                        <!--<input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">-->
+                                        <!--<div class="input-group-addon">KM</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="col-xs-12">-->
+                            <!--<label class="control-label" for="">Velicina</label>-->
+                            <!--<div class="wrapper">-->
+                                <!--<div class="form-group col-xs-6">-->
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon">od:</span>-->
+                                        <!--<input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">-->
+                                        <!--<div class="input-group-addon">m&sup2</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="form-group col-xs-6">-->
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon">do:</span>-->
+                                        <!--<input type="text" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">-->
+                                        <!--<div class="input-group-addon">m&sup2</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+
+                        <div class="form-group col-xs-12">
+                            <label class="control-label" for="hero-price">Cijena</label>
+                            <input class="" type="text" id="hero-price" name="price" value="" />
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <label class="control-label" for="hero-area">Površina</label>
+                            <input class="" type="text" id="hero-area" name="area" value="" />
                         </div>
 
 
@@ -408,27 +455,27 @@
             <div class="featured-title">
                 <h1>Izdvojeni oglasi</h1>
             </div>
-            <div class="featured-controls">
-                <div class="btn-group">
-                    <a href="#" data-controls="grid" class="btn btn-invert btn-lg active"><span class="fa fa-th"></span></a>
-                    <a href="#" data-controls="gridlg" class="btn btn-invert btn-lg"><span class="fa fa-th-large"></span></a>
-                    <a href="#" data-controls="list" class="btn btn-invert btn-lg"><span class="fa fa-th-list"></span></a>
+            <!--<div class="featured-controls">-->
+                <!--<div class="btn-group">-->
+                    <!--<a href="#" data-controls="grid" class="btn btn-invert btn-lg active"><span class="fa fa-th"></span></a>-->
+                    <!--<a href="#" data-controls="gridlg" class="btn btn-invert btn-lg"><span class="fa fa-th-large"></span></a>-->
+                    <!--<a href="#" data-controls="list" class="btn btn-invert btn-lg"><span class="fa fa-th-list"></span></a>-->
 
-                </div>
-            </div>
+                <!--</div>-->
+            <!--</div>-->
             <div class="featured-list">
                 <!--<div class="wrapper">-->
 
-                    <div class="featured-list-item grid">
+                    <div class="featured-list-item">
                         <img class="img-responsive" src="images/featured/1-1.jpg">
                     </div>
-                    <div class="featured-list-item grid">
+                    <div class="featured-list-item">
                         <img class="img-responsive" src="images/featured/1-1.jpg">
                     </div>
-                    <div class="featured-list-item grid">
+                    <div class="featured-list-item">
                         <img class="img-responsive" src="images/featured/1-1.jpg">
                     </div>
-                    <div class="featured-list-item grid">
+                    <div class="featured-list-item">
                         <img class="img-responsive" src="images/featured/1-1.jpg">
                     </div>
                 <!--</div>-->
@@ -458,7 +505,7 @@
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="new-title">
-                <h1>Novi oglasi</h1>
+                <h1>Najnoviji oglasi</h1>
             </div>
         </div>
     </div>
