--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
 </section>
 
 <section class="new">
+    <div class="overlay"></div>
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="new-title">
