--- a/index.html
+++ b/index.html
@@ -376,6 +376,17 @@
                     </form>
                 </div>
             </div>
+
+            <div class="hero-ad-area">
+                <a href="#">
+                    <div class="ad">
+                        <p class="text-center">
+                            mjesto za reklamu
+                            750x500 290x200
+                        </p>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
@@ -514,6 +525,54 @@
             <div class="new-title">
                 <h1>Najnoviji oglasi</h1>
             </div>
+            <div class="new-controls">
+                <div class="btn-group">
+                <a href="#" data-controls="grid" class="btn btn-invert btn-lg active"><span class="fa fa-th"></span></a>
+                <a href="#" data-controls="gridlg" class="btn btn-invert btn-lg"><span class="fa fa-th-large"></span></a>
+                <a href="#" data-controls="list" class="btn btn-invert btn-lg"><span class="fa fa-th-list"></span></a>
+                </div>
+            </div>
+
+            <div class="col-xs-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Panel heading without title</div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+
+            <div class="col-xs-12">
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="proba">
+                    asd
+                </div>
+            </div>
+
+
         </div>
     </div>
 </section>
