--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
-<html lang="sh">
+<html lang="bs">
 <head>
     <meta charset="UTF-8">
-    <title>dom.ba</title>
+    <title>DOM.ba - Portal za nekretnine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <meta name="description" content="Portal DOM.ba! Idealno mjesto za unos, pregled i prodaju vaših nekretnina.">
+    <meta name="keywords" content="dom.ba, nekretnine, prodaja, iznajmljivanje, , izdavanje, oglasi, stambeni objekti, stan, kuca, poslovni prostor, ugostiteljski objekat, garsonjera, garaza, plac, apartmani, kompanije, vikendice">
+    <meta name="language" content="Bosnian ">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="1 days">
+
     <!-- FAV icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/images/fav/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/fav/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/images/fav/manifest.json">
-    <link rel="mask-icon" href="/images/fav/safari-pinned-tab.svg" color="#d40f0f">
-    <link rel="shortcut icon" href="/images/fav/favicon.ico">
-    <meta name="msapplication-config" content="/images/fav/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/img/fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/img/fav/manifest.json">
+    <link rel="mask-icon" href="/img/fav/safari-pinned-tab.svg" color="#d40f0f">
+    <link rel="shortcut icon" href="/img/fav/favicon.ico">
+    <meta name="msapplication-config" content="/img/fav/browserconfig.xml">
     <meta name="theme-color" content="#d40f0f">
 
+    <!-- Open Graph data -->
+    <meta property="fb:app_id" content="1505931683046243">
+    <meta property="og:url" content="http://www.dom.ba/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="DOM.ba - Portal za nekretnine">
+    <meta property="og:description" content="Portal DOM.ba! Idealno mjesto za unos, pregled i prodaju vaših nekretnina.">
+    <meta property="og:image" content="http://dom.ba/img/fb-logo.jpg" />
 
     <link rel="stylesheet" href="css/main.min.css">
 
@@ -24,6 +37,7 @@
 <!--    Main menu
         section variables: less/my-variables.less
         variables prefix: @main-menu-
+        section style: less/main-menu.less
 -->
 <nav id="main-menu" class="animated slideOutUp top">
     <div class="container">
@@ -172,6 +186,7 @@
 <!--    Header
         section variables: less/my-variables.less
         variables prefix: @header-
+        section style: less/header.less
 -->
 <header class="header container-fluid top">
     <div class="wrapper">
@@ -238,6 +253,7 @@
 <!--    Hero section
         section variables: less/my-variables.less
         variables prefix: @hero-
+        section style: less/jumbotron.less
 -->
 <section class="hero">
     <div class="hero-overlay"></div>
@@ -402,7 +418,11 @@
     </div>
 </section>
 
-<!-- Call to action section -->
+<!--    Call to action section
+        section variables: less/my-variables.less
+        variables prefix: @cta-
+        section style: less/cta.less
+-->
 <section class="cta">
     <div class="wrapper-outer">
         <div class="wrapper">
@@ -418,7 +438,11 @@
 
 </section>
 
-<!-- Partners section -->
+<!--    Partners section
+        section variables: less/my-variables.less
+        variables prefix: @partners-
+        section style: less/partners.less
+-->
 <section class="partners">
     <div class="wrapper-outer">
         <div class="wrapper">
@@ -428,42 +452,42 @@
             <div class="partners-list">
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-1.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-1.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-2.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-2.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-3.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-3.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-4.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-4.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-1.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-1.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-2.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-2.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-3.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-3.jpg" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper">
-                        <img class="img-responsive" src="images/partners/partner-4.jpg" alt="">
+                        <img class="img-responsive" src="img/partners/partner-4.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -472,7 +496,11 @@
 
 </section>
 
-<!-- Featured ads section -->
+<!--    Featured ads section
+        section variables: less/my-variables.less
+        variables prefix: @featured-
+        section style: less/featured.less
+-->
 <section class="featured">
     <div class="overlay"></div>
     <div class="wrapper-outer">
@@ -484,7 +512,7 @@
 
                 <!-- Featured ads - single ad -->
                 <article class="featured-list-item">
-                    <img class="img-responsive" src="images/featured/1-1.jpg">
+                    <img class="img-responsive" src="img/featured/1-1.jpg">
                     <div class="panel-body">
                         <p>
                             sad
@@ -493,7 +521,7 @@
                 </article>
 
                 <article class="featured-list-item">
-                    <img class="img-responsive" src="images/featured/1-1.jpg">
+                    <img class="img-responsive" src="img/featured/1-1.jpg">
                     <div class="panel-body">
                         <p>
                             sad
@@ -501,7 +529,7 @@
                     </div>
                 </article>
                 <article class="featured-list-item">
-                    <img class="img-responsive" src="images/featured/1-1.jpg">
+                    <img class="img-responsive" src="img/featured/1-1.jpg">
                     <div class="panel-body">
                         <p>
                             sad
@@ -513,7 +541,11 @@
     </div>
 </section>
 
-<!-- New ads section -->
+<!--    New ads section
+        section variables: less/my-variables.less
+        variables prefix: @new-
+        section style: less/new.less
+-->
 <section class="new">
     <div class="overlay"></div>
     <div class="wrapper-outer">
@@ -573,7 +605,11 @@
     </div>
 </section>
 
-<!-- Footer -->
+<!--    Footer
+        section variables: less/my-variables.less
+        variables prefix: @footer-
+        section style: less/footer.less
+-->
 <footer class="footer">
     <div class="overlay"></div>
     <div class="wrapper-outer">
