--- a/app/index-logged-in.html
+++ b/app/index-logged-in.html
@@ -29,7 +29,9 @@
     <meta property="og:description" content="Portal DOM.ba! Idealno mjesto za unos, pregled i prodaju vaših nekretnina.">
     <meta property="og:image" content="http://dom.ba/img/fb-logo.jpg" />
 
-    <link rel="stylesheet" href="css/main.min.css">
+    <!--build:css css/main.min.css -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- endbuild -->
 
 </head>
 <body>
@@ -870,12 +872,19 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <a href="index-logged-in.html" class="btn">početna stranica kad je korisnik prijavljen</a>
+            <a href="index.html" class="btn">početna stranica kad korisnik nije prijavljen</a>
         </div>
     </div>
 </div>
 
-<script src="js/main.min.js"></script>
+<!--build:js js/main.min.js -->
+<script src="components/jquery/dist/jquery.min.js"></script>
+<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="components/slick-carousel/slick/slick.min.js"></script>
+<script src="components/ion.rangeSlider/js/ion.rangeSlider.min.js"></script>
+
+<script src="js/main.js"></script>
+<!-- endbuild -->
 
 </body>
 </html>
